--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
     "ember-export-application-global": "^1.0.2",
+    "ember-notify": "^3.1.4",
     "emberfire": "1.4.4"
   }
 }
